--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
     font-size: 62.5%;
 }
 
-.container {
+.header-container {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -56,6 +56,13 @@ h2 {
     font-weight: 100;
 }
 
+.article {
+    margin: 50px auto;
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+}
+
 
 .right {
     height: 100vh;
@@ -68,13 +75,50 @@ h2 {
 }
 
 a {
-    color: white;
+    color: white !important;
     text-align: center;
     font-size: 4.8rem;
     font-family: 'Roboto', sans-serif;
     cursor: pointer;
+    border-bottom: 3px solid black;
 }
 
 a:hover {
     border-bottom: 3px solid white;
+}
+
+.container {
+    margin-top: 20px;
+    width: 75%;
+}
+
+.col {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.card {
+    height: 450px;
+}
+
+.card:hover {
+    box-shadow: 3px 3px 12px grey;
+}
+
+img {
+    height: 200px
+}
+
+.sidebar {
+    width: 20%;
+    border-left: 1px solid black;
+    padding: 20px;
+    font-size: 1.2rem;
+}
+
+h3 {
+    font-family: 'Anton', sans-serif;
+    font-size: 2rem;
 }
